--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-navbar></app-navbar>
+<mat-slide-toggle (click)="toggleDarkMode()" [(ngModel)]="isDarkMode"
+        >Dark mode</mat-slide-toggle
+      >
 <router-outlet></router-outlet>
