--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,6 @@ asl-google-signin-button div{
     justify-content: center;
     text-align:center;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
