--- a/src/app/components/form-note/form-note.component.html
+++ b/src/app/components/form-note/form-note.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="form-group">
-      <label>Título</label>
+      <label> <b> Título </b></label>
       <input #title type="text" class="form-control" formControlName="title" placeholder="Título">
     </div>
     <div class="form-group">
-      <label>Descripción</label>
+      <label> <b> Descripción </b></label>
       <input type="text" class="form-control" formControlName="description" placeholder="Descripción">
     </div>
     <input type="hidden" formControlName="id">
