--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,4 +1,10 @@
-<p>Developodo</p>
-<p>{{mensaje}}</p>
-<img [src]="src" alt="Cargando la imagen del momento...">
-<!-- src = 'https://source.unsplash.com/random'-->
+<div class="div1"> 
+    <img class="radius" src="assets/images/img_avatar.png" alt="Avatar" style="width:200px">
+    <div class="div2"> 
+        <span class="font"> Angel Rey </span>
+    </div>
+    <a href="https://github.com/Angel-Rey11"> <img class="img1" src="assets/images/git.png"> </a>
+    <a href="https://www.linkedin.com/in/angel-rey-gamiz-85634b222/"> <img class="img2" src="assets/images/Linkedin.png"> </a>
+    <hr/>
+    <span class="font2"> Página realizada por Angel Rey para el proyecto de Angular.</span>
+</div>
