--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,10 +1,20 @@
-<div class="div1"> 
-    <img class="radius" src="assets/images/img_avatar.png" alt="Avatar" style="width:200px">
-    <div class="div2"> 
-        <span class="font"> Angel Rey </span>
+<div class="container">
+    <div class="div1"> 
+        <img class="radius" src="assets/images/user.jpg" alt="Avatar" style="width:200px">
+        <div class="div2"> 
+            <span class="font"> Angel Rey </span>
+        </div>
+        <a href="https://github.com/Angel-Rey11"> <img class="img1" src="assets/images/git.png"> </a>
+        <a href="https://www.linkedin.com/in/angel-rey-gamiz-85634b222/"> <img class="img2" src="assets/images/Linkedin.png"> </a>
     </div>
-    <a href="https://github.com/Angel-Rey11"> <img class="img1" src="assets/images/git.png"> </a>
-    <a href="https://www.linkedin.com/in/angel-rey-gamiz-85634b222/"> <img class="img2" src="assets/images/Linkedin.png"> </a>
-    <hr/>
-    <span class="font2"> Página realizada por Angel Rey para el proyecto de Angular.</span>
+    <div class="div3">
+        <p class="font"> El objetivo de este proyecto es un almacén de notas, donde podremos crear notas que se almacenan en una base de datos. <br>
+            Se implementa una base de datos en firebase y el login con google para tener nuestras notas privadas con las diferentes cuentas. <br> 
+            Este proyecto también contiene el modo oscuro, donde cambiará todo el aspecto de la aplicacion. <br> 
+            </p>
+        <p class="about"> Proyecto realizado por Angel Rey, estudiante de 2DAM, realizado con Angular. </p>
+        <img class="img3" src="assets/images/angular.png">
+        <img class="img3" src="assets/images/html.png">
+        <img class="img3" src="assets/images/css.png">
+    </div>
 </div>
