--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,10 +1,16 @@
 .div1 {
     background-color: rgb(187, 169, 145);
-    height: 70vh;
+    height: 65vh;
     width: 50%;
     border-radius: 30px;
     margin-top: 2%;
-    margin-left: 25%;
+    margin-left: 10%;
+    float: left;
+    
+}
+
+.container {
+    width: 2000px;
 }
 
 .div2 {
@@ -12,15 +18,35 @@
     margin-left: 42%;
 }
 
+.div3 {
+    float: right;
+    background-color: rgb(187, 169, 145);
+    width: 38%;
+    margin-top: 2%;
+    border-radius: 30px;
+    height: 60vh;
+}
+
 .radius {
-    border-radius: 50%;
-    margin-top: 5%;
+    border-radius: 30%;
+    margin-top: 2%;
     margin-left: 33%;
 }
 
 .font {
-    text-align: center;
     font-size: 18px;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 2%;
+    text-align: justify;
+}
+
+.about {
+    font-size: 18px;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 5%;
+    text-align: justify;
 }
 
 .img1 {
@@ -33,6 +59,12 @@
     width: 60px;
     margin-top: 5%;
     margin-left: 5%;
+}
+
+.img3 {
+    width: 60px;
+    margin-top: 5%;
+    margin-left: 15%;
 }
 
 hr {
