--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,6 +78,10 @@ $app-dark-theme: mat-dark-theme($mat-primary-palette, $mat-accent-palette);
     background-color: rgb(124, 116, 116) !important;
   }
 
+  .div3 {
+    background-color: rgb(124, 116, 116) !important;
+  }
+
   .form-control {
     background-color: #333 !important;
     color: white !important;
