--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th class="cabesa" scope="col">Titulo</th>
-      <th class="cabesa2" scope="col">Descripción</th>
+      <th class="cabesa2" scope="col">Descripcion</th>
       <th class="cabesa3" scope="col">Borrar</th>
       <th class="cabesa4" scope="col">Editar</th>
     </tr>
