--- a/src/app/components/form-note/form-note.component.html
+++ b/src/app/components/form-note/form-note.component.html
@@ -1,12 +1,12 @@
 <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="form-group">
-      <label> <b> Título </b></label>
-      <input #title type="text" class="form-control" formControlName="title" placeholder="Título">
+      <label> <b> {{"Titulo" | translate}} </b></label>
+      <input #title type="text" class="form-control" formControlName="title" placeholder="Title">
     </div>
     <div class="form-group">
-      <label> <b> Descripción </b></label>
-      <input type="text" class="form-control" formControlName="description" placeholder="Descripción">
+      <label> <b> {{"Descripcion" | translate}} </b></label>
+      <input type="text" class="form-control" formControlName="description" placeholder="Description">
     </div>
     <input type="hidden" formControlName="id">
-    <button type="submit" class="btn btn-primary" [disabled]="this.form.status!='VALID'">Guardar</button>
+    <button type="submit" class="btn btn-primary" [disabled]="this.form.status!='VALID'"> {{"Guardar" | translate}} </button>
 </form>
