--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,25 +1,27 @@
 <nav class="navbar navbar-expand-lg bg-light">
     <div style="background-color: inherit;" class="container-fluid">
-      <a class="navbar-brand" routerLink="/">Notas</a>
+      <a class="navbar-brand" routerLink="/">{{"Notas" | translate}}</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a>
-          <a class="nav-link" routerLink="/new">Nueva nota</a>
-          <a class="nav-link" routerLink="/about">Acerca de</a>
+          <a class="nav-link active" aria-current="page" routerLink="/">{{"Inicio" | translate}}</a>
+          <a class="nav-link" routerLink="/new">{{"Nueva" | translate}}</a>
+          <a class="nav-link" routerLink="/about">{{"Acerca de" | translate}}</a>
           <li class="nav-item dropdown" *ngIf="this.loginS.user">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Cuenta
+              {{"Cuenta" | translate}}
             </a>
             <ul class="dropdown-menu" >
               <li>   <span style="padding:10px;">{{this.loginS.user!.name}}</span></li>
               <li>   <span style="padding:10px;">{{this.loginS.user!.email}}</span></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#" (click)="logout()" > Logout </a></li>
+              <li><a class="dropdown-item" href="#" (click)="logout()" > {{"Cerrar Sesion" | translate}} </a></li>
             </ul>
           </li>
+          <button class="btn"(click)="cambiarEspanol()">  <img class="img-fluid" src="assets/images/spain.png" alt="Error"> </button>
+          <button class="btn"(click)="changeToEnglish()"> <img class="img-fluid" src="assets/images/united-kingdom.png" alt="Error"> </button>
         </div>
       </div>
     </div>
