--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -1,10 +1,10 @@
 <table class="table">
   <thead>
     <tr>
-      <th class="cabesa" scope="col">Titulo</th>
-      <th class="cabesa2" scope="col">Descripcion</th>
-      <th class="cabesa3" scope="col">Borrar</th>
-      <th class="cabesa4" scope="col">Editar</th>
+      <th class="cabesa" scope="col">{{"Titulo" | translate }}</th>
+      <th class="cabesa2" scope="col">{{"Descripcion" | translate }}</th>
+      <th class="cabesa3" scope="col">{{"Borrar" | translate }}</th>
+      <th class="cabesa4" scope="col">{{"Editar" | translate }}</th>
     </tr>
   </thead>
   <tbody>
