--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -8,11 +8,9 @@
         <a href="https://www.linkedin.com/in/angel-rey-gamiz-85634b222/"> <img class="img2" src="assets/images/Linkedin.png"> </a>
     </div>
     <div class="div3">
-        <p class="font"> El objetivo de este proyecto es un almacén de notas, donde podremos crear notas que se almacenan en una base de datos. <br>
-            Se implementa una base de datos en firebase y el login con google para tener nuestras notas privadas con las diferentes cuentas. <br> 
-            Este proyecto también contiene el modo oscuro, donde cambiará todo el aspecto de la aplicacion. <br> 
+        <p class="font"> {{ "Desc" | translate}}<br> 
             </p>
-        <p class="about"> Proyecto realizado por Angel Rey, estudiante de 2DAM, realizado con Angular. </p>
+        <p class="about"> {{ "Desc2" | translate}} </p>
         <img class="img3" src="assets/images/angular.png">
         <img class="img3" src="assets/images/html.png">
         <img class="img3" src="assets/images/css.png">
