--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,39 +1,7 @@
 @import "@angular/material/theming";
 @include mat-core();
-asl-google-signin-button div{
-  display:flex;
-  flex-direction: row;
-  justify-content: center;
-  text-align:center;
-}
-$mat-primary-scheme: (
-  100: #c5cae9,
-  500: #61699a,
-  700: #303f9f,
-  contrast: (
-    100: rgba(0, 0, 0, 0.87),
-    500: #ffffff,
-    700: #ffffff,
-  ),
-);
-$mat-accent-scheme: (
-  100: #ff80ab,
-  500: #ff4081,
-  700: #f50057,
-  contrast: (
-    100: rgba(0, 0, 0, 0.87),
-    500: rgba(0, 0, 0, 0.87),
-    700: #ffffff,
-  ),
-);
-$mat-primary-palette: mat-palette($mat-primary-scheme);
-$mat-accent-palette: mat-palette($mat-accent-scheme);
-
-$app-light-theme: mat-light-theme($mat-primary-palette, $mat-accent-palette);
 
 .light-mode {
-  @include angular-material-theme($app-light-theme);
-
   .form-control {
     background-color: rgb(187, 169, 145) !important;
   }
@@ -69,11 +37,9 @@ $app-light-theme: mat-light-theme($mat-primary-palette, $mat-accent-palette);
   }
 }
 
-$app-dark-theme: mat-dark-theme($mat-primary-palette, $mat-accent-palette);
+
 
 .dark-mode {
-  @include angular-material-theme($app-dark-theme);
-
   .div1 {
     background-color: rgb(124, 116, 116) !important;
   }
@@ -147,7 +113,7 @@ $app-dark-theme: mat-dark-theme($mat-primary-palette, $mat-accent-palette);
 }
 
 #credential_picker_container {
-  display: none;
+  display: none !important;
 }/* You can add global styles to this file, and also import other style files */
 asl-google-signin-button div{
   display:flex;
@@ -157,3 +123,6 @@ asl-google-signin-button div{
 }
 
 
+#credential_picker_iframe {
+  display: none !important;
+}
